implemented swagger auto codegen version
